infra/apps/media/jellyfin/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata: {name: jellyfin, namespace: media}
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`media.homelab.gvlad.dev`)
      kind: Rule
      middlewares: [{name: security-headers}]
      services: [{name: jellyfin, port: 8096}]
  tls: {}
